--- a/HTMLfile.html
+++ b/HTMLfile.html
@@ -1,17 +1,16 @@
-<!DOCTYPE HTML> 
-<html> 
-<head> 
- <title>My Online Diary</title> 
-</head> 
-<body> 
- <center><br><br><br> 
- <form name="f" action="login.php" method="POST"> 
-  uname:<input type="text" name="tf1" > <br>
-  pass:<input type="password" name="tf2" > <br>
-  <input type="submit" value="Save"> 
-
- </form> 
- </center> 
-  
-</body> 
-</html> 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Online Diary</title>
+  </head>
+  <body>
+    <center>
+      <br /><br /><br />
+      <form name="f" action="login.php" method="POST">
+        uname:<input type="text" name="tf1" /> <br />
+        pass:<input type="password" name="tf2" /> <br />
+        <input type="submit" value="Save" />
+      </form>
+    </center>
+  </body>
+</html>
