--- a/after_login.html
+++ b/after_login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WORKPLACE</title>
+    <title>Dash Board</title>
     <style type="text/css">
       body {
         background-image: url("pic3.jpg");
         background-repeat: no-repeat;
-        background-size: 100%, 100%;
+        background-size: cover;
       }
       .button {
         width: 65%;
@@ -29,15 +29,16 @@
         font-size: 18px;
       }
       .heading {
-        color: black;
-        font-size: 100px;
+        color: white;
+        font-size: 5rem;
       }
       .lg {
         background-color: #3399ff;
         float: right;
-        width: 4%;
-        height: 15%;
-        border-radius: 8px;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 12px;
       }
     </style>
   </head>
