--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
       body {
         background-image: url("pic.jpg");
         background-repeat: no-repeat;
-        background-size: 100%, 100%;
+        background-size: cover;
       }
       .button {
         background-color: #f44336;
