--- a/view.html
+++ b/view.html
@@ -6,7 +6,7 @@
       body {
         background-image: url("pic3.jpg");
         background-repeat: no-repeat;
-        background-size: 100%, 100%;
+        background-size: cover;
       }
 
       .button {
@@ -26,7 +26,7 @@
 
       p {
         font-size: 34px;
-        color: black;
+        color: white;
         font-weight: bold;
       }
       textarea.oblique {
@@ -37,6 +37,14 @@
         font-weight: bold;
         border-radius: 8px;
       }
+      .lg {
+        background-color: #3399ff;
+        float: right;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 12px;
+      }
     </style>
   </head>
   <body>
@@ -45,12 +53,25 @@
       <form action="view.php" method="POST">
         <p>Remind Me The Date :</p>
 
-        <input type="Date" id="Date" name="tf1" />
+        <input type="Date" id="Date" name="tf1" required />
 
         <br /><br /><br />
 
         <input type="submit" value="Submit" name="submit" class="button" />
         <input type="reset" value="Reset" class="button" />
+        <br />
+        <input
+          type="button"
+          value="Dashboard"
+          class="lg"
+          onclick="window.location.href='after_login.html';"
+        />
+        <input
+          type="button"
+          value="Logout"
+          class="lg"
+          onclick="window.location.href='index.html';"
+        />
       </form>
     </center>
   </body>
